Revert "Two columns of posts and fix covered scroll up button"
This reverts commit 8d67612483d1c21ad50a07ea184ca2ba051ab865.

--- a/src/NavFooter.css
+++ b/src/NavFooter.css
@@ -7,10 +7,6 @@
     overflow:hidden;
 }
 
-#nav-bar-priority {
-    z-index: 0;
-}
-
 .item {
     float:left;
     width:20%;
